# pyidw

./: .gitignore  README.md  changelog.md  pyproject.toml
.github/workflows/: ci.yml
pyidw/: idw.py
src/pyidw/: __init__.py  idw.py
tests/: test_example_code.py  test_import.py
tests/example_data/: Bangladesh_Border.dbf  Bangladesh_Temperature.dbf  Bangladesh_Temperature.sbn  Bangladesh_Temperature.sbx  Bangladesh_Temperature.shp  Bangladesh_Temperature.shx
